# long-life-to-brewers

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requests.http  run.sh  setup.sh
airflow/: .gitignore  Dockerfile  airflow-compose.yaml  requirements.txt
airflow/dags/: open-brewery-db-pipeline.py  say-hello.py
airflow/plugins/: brewery_plugin
common/: Dockerfile  common-compose.yaml  init-databases.sh
lineage/: lineage-compose.yaml  marquez.yaml
minio/: minio-compose.yaml  minio-init.sh
notebooks/: brewery-explore.ipynb
scripts/: default-env.sh
spark/: Dockerfile  Dockerfile.catalog  entrypoint.sh  spark-compose.yaml  spark-defaults.conf
spark/conf/: spark-defaults.conf
src/brewery/: bronze.py  cli.py  common.py  exceptions.py  gold.py  pipeline.py  silver.py
src/brewery_plugin/: brewery_plugin  notifier.py
tests/: conftest.py  test_bronze.py  test_common.py  test_gold.py  test_silver.py
