
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "brewery"
version = "0.1.0"
description = "Brewery is a Python package to get and process data from Open Brewery DB."
authors = [
    { name = "João Guilherme Costa", email = "joaoguilhermeall@gmail.com" },
]
requires-python = "==3.10.*"
readme = "README.md"

dependencies = ["httpx>=0.28.1", "minio>=7.2.15"]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.26.0",
]
dev = [
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "ipykernel>=6.29.5",
]
providers = [
    "apache-airflow==2.10.5",
    "apache-airflow-providers-docker==4.2.1",
]

[tool.pdm]
distribution = true

[project.scripts]
brewery-cli = "brewery.cli:main"

[tool.pdm.scripts]
lint = "ruff check ."
format = "ruff format ."
docs = "mkdocs serve"
release = { shell = "pdm version {args} && git commit pyproject.toml -m '🔖 {args}' && git tag -a {args} -m 'Release {args}' && git push origin {args}" }

[tool.pdm.resolution]
excludes = ["notebook", "ipykernel"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle - Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle - Warning
    "UP", # pyupgrade
]
fixable = [
    "F401", # Unused import
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
pretty = true
python_version = "3.10"
ignore_missing_imports = false
no_site_packages = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_return_any = true
warn_unreachable = true
allow_redefinition = false
show_error_codes = true
disallow_untyped_defs = true
exclude = [
    "^(?!src).*"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
